--- a/js-react/src/index.css
+++ b/js-react/src/index.css
@@ -54,6 +54,24 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+
+.section1 {
+  border: 1px solid salmon;
+  border-radius: 10px;
+  padding: 10px 50px;
+  margin: 20px 10px;
+}
+
+.section2 {
+  border: 1px solid blue;
+  border-radius: 10px;
+  padding: 10px 30px;
+  margin: 20px 10px;
+}
+.ps1 {
+  text-align: left;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
